[package]
name = "beacon-searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.3"
glib = "0.14.8"
btleplug = "0.9.0"
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3.17"
uuid = "0.8.2"
regex = "1.5.4"
once_cell = "1.8.0"
